# xvattr

./: Makefile  README.md  encoding.patch  xvattr.spec
src/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  configure  configure.in  gxvattr.c  xvattr.1  xvattr.c  xvattr.html  xvattr.pod  xvattr.pod.in
