AC_INIT(xvattr.c)
AM_INIT_AUTOMAKE(xvattr, 1.3)
     
dnl Checks for programs.
AC_PROG_CC
     
dnl Checks for header files.
AC_STDC_HEADERS
     
dnl Check for getopt_long (note that LIBOBJS is a special name for automake)
AC_SUBST(LIBOBJS)
AC_CHECK_FUNCS(getopt_long , , [LIBOBJS="$LIBOBJS getopt.o getopt1.o"])

dnl
dnl Checks for X11
dnl
AC_PATH_XTRA

dnl check for gtk
AM_PATH_GTK

dnl Checks for libraries.
AC_ARG_WITH(xv-path,[  --with-xv-path=path    Where libXv is installed],
            xv_path="$withval", xv_path="/usr/X11R6/lib")

AC_CHECK_LIB(Xv, XvQueryExtension ,,
	AC_MSG_WARN([Did not find Xv this program is meaningless without Xv]),
	[$X_LIBS $X_PRE_LIBS -lXext $X_EXTRA_LIBS])

AC_CHECK_HEADERS(stdio.h stdlib.h X11/Xlib.h X11/extensions/Xvlib.h , , ,
                 [#include <X11/Xlib.h>])

AC_OUTPUT([Makefile xvattr.pod])
